--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/DeletePatient.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/DeletePatient.cshtml
@@ -1,25 +1,23 @@
-﻿@model MedOnTime_WebApp.Models.Medication
+﻿@model MedOnTime_WebApp.Models.Patient
 
-@{
-    ViewData["Title"] = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+@{ ViewData["Title"] = "Delete";
+                Layout = "~/Views/Shared/_Layout.cshtml"; }
 <div class="text-center">
     <table>
         <tr>
             <td class="text-danger">
-                <h3>Confirm delete @Model.MedicationName?</h3>
+                <h3>Confirm delete @Model.FirstName @Model.LastName?</h3>
             </td>
         </tr>
         <tr>
             <td>
-                <form asp-action="MedicationDelete" method="post">
-                    <input type="hidden" name="objID" value="@Model.Id" />
+                <form asp-action="DeletePatient" method="post">
+                    <input type="hidden" name="Id" value="@Model.Id" />
                     <input type="submit" value="Delete" class="btn btn-danger" />
                 </form>
             </td>
             <td>
-                <form asp-action="MedicationDetails" method="get">
+                <form asp-action="PatientProfile" method="get">
                     <input type="hidden" name="Id" value="@Model.Id" />
                     <input type="submit" value="No" class="btn btn-primary" />
                 </form>
@@ -38,26 +36,26 @@
             @Html.DisplayFor(model => model.Id)
         </dd>
         <dt class="col-sm-2">
-            Medication Name
+            Patient Name
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MedicationName)
+            @Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt class="col-sm-2">
-            Method of Taking
+            Age
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MethodOfTaking)
+            @Html.DisplayFor(model => model.Age)
         </dd>
         <dt class="col-sm-2">
-            Medication Type
+            Email
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MedicationType)
+            @Html.DisplayFor(model => model.Email)
         </dd>
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "MedicationEdit", new { Id = Model.Id }) |
-    @Html.ActionLink("Back to list", "MedicationList")
+    @Html.ActionLink("Edit", "EditPatient", new { Id = Model.Id }) |
+    @Html.ActionLink("Back to list", "PatientList")
 </div>
