Revert "Added Patient CRUD Pages & Consume API Methods."
This reverts commit 89cec10bdfde7aa7502dec26dc97447de5745993.

--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDelete.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDelete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MedOnTime_WebApp.Models.Medication
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="text-center">
