--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientProfile.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientProfile.cshtml
@@ -1,35 +1,41 @@
-﻿@model Patient
+﻿
+<h3><img class="heartBeatIcon" src="~/img/heart-beat-icon.png" alt="Heart Icon" />   Patient Profile</h3>
 
-@{ ViewData["Title"] = "Patient Profile";
-                Layout = "~/Views/Shared/_Layout.cshtml"; }
-
+<table align="center">
+    <tr>
+        <td>First Name:</td>
+        <td>patient.Fname</td>
+    </tr>
+    <tr>
+        <td>Middle Name:</td>
+        <td>patient.Mname</td>
+    </tr>
+    <tr>
+        <td>Last Name:</td>
+        <td>patient.Lname</td>
+    </tr>
+    <tr>
+        <td>Phone No:</td>
+        <td>patient.phone</td>
+    </tr>
+    <tr>
+        <td>dob:</td>
+        <td>patient.dob</td>
+    </tr>
+    <tr>
+        <td>Email:</td>
+        <td>patient.Email</td>
+    </tr>
+</table>
+<img id="homeCalendar" src="~/img/calendarIcon.png" alt="Calendar Icon" />
 <div>
-    <h1>Details</h1>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            Medication ID
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class="col-sm-2">
-            Caretaker ID
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CaretakerID)
-        </dd>
-        <dt class="col-sm-2">
-            Patient ID
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PatientID)
-        </dd>
-        <!-- To Continue adding properties-->
-    </dl>
-</div>
-<div>
-    @Html.ActionLink("Edit", "EditPatient", new { Id = Model.Id }) |
-    @Html.ActionLink("Delete", "DeletePatient", new { Id = Model.Id }) |
-    @Html.ActionLink("Back to list", "PatientList")
-</div>
+    @*<table>
+            @foreach(var medication in Patient.Medication)
+            {
+                <tr>
+                    <td>medication.Name</td>
+                </tr>
+            }
+        </table>*@
+</div><br />
+<a class="homeRoute" asp-action="SchedulePicker">Add Medical Schedule</a>
