--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Shared/_Layout.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Shared/_Layout.cshtml
@@ -45,11 +45,11 @@
             <img id="calendar-icon" src="~/img/calander-icon.png" alt="Calendar Icon" />
         </a>
         <br />
-        <a class="side-panel-item btn" asp-controller="Medication" asp-action="MedicationList" aria-current="true">
+        <a class="side-panel-item btn"  asp-controller="Home" asp-action="QRCode" aria-current="true">
             <img id="pill-icon" src="~/img/pill-icon.png" alt="Pill Icon" />
         </a>
         <br />
-        <a class="side-panel-item btn" asp-controller="Home" asp-action="QRCode" aria-current="true">
+        <a class="side-panel-item btn"  asp-controller="Patient" asp-action="PatientList" aria-current="true">
             <img id="peoples-icon" src="~/img/peoples-icon.png" alt="Peoples Icon" />
         </a>
     </div>
