--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationForm.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationForm.cshtml
@@ -4,43 +4,40 @@
     <div class="alert-danger text-left" asp-validation-summary="All"></div>
     <h4>Add new medication for @LoginStatus.SelectedPatient.FirstName</h4>
     <form asp-action="MedicationForm" method="post">
+        <input type="submit" />
         <!--Current Caretaker-->
         <input type="hidden" value="@LoginStatus.LogginedUser.Id" asp-for="CaretakerID" />
         <input type="hidden" value="@LoginStatus.SelectedPatient.PatientID" asp-for="PatientID" />
         <!-- Medication name field-->
-        <div class="form-group">
-            <label asp-for="MedicationName">Medication Name</label>
+        <div class="registerField">
             <input class="form-control" asp-for="MedicationName" placeholder="Medication Name" />
         </div>
         <!-- Method of taking field-->
-        <div class="form-group">
-            <label asp-for="MethodOfTaking">Method of Taking</label>
-            <input class="form-control" asp-for="MethodOfTaking" placeholder="Ex: Grinded Pills" />
+        <div class="registerField">
+            <input class="form-control" asp-for="MethodOfTaking" placeholder="Method of Taking" />
         </div>
         <!-- Dosage field-->
-        <div class="form-group">
-            <label asp-for="Dosage">Dosage</label>
-            <input class="form-control" asp-for="Dosage" placeholder="How many milligrams/millileters?" />
+        <div class="registerField">
+            <input class="form-control" asp-for="Dosage" placeholder="Dosage" />
         </div>
         <!-- Quantity field-->
-        <div class="form-group">
-            <label asp-for="Quantity">Quantity</label>
-            <input class="form-control" asp-for="Quantity" min="0" placeholder="How many pills?" />
+        <div class="registerField">
+            <input class="form-control" asp-for="Quantity" min="0" placeholder="Quantity" />
         </div>
         <!-- Medicine type field-->
-        <div class="form-group">
-            <label asp-for="MedicationType">Medicine Type</label><br />
-            <select class="form-select form-select-lg mb-3" asp-for="MedicationType">
-                <option value="pill" selected>Pill</option>
+        <div class="registerField">
+            <select class="form-control  mb-3" asp-for="MedicationType">
+                <option selected>Medicine Type</option>
+                <option value="pill">Pill</option>
                 <option value="syrup">Syrup</option>
                 <option value="spray">Spray</option>
             </select>
         </div>
 
         <!-- Frequency field-->
-        <div class="form-group">
-            <label asp-for="Frequency">Frequency</label><br />
-            <select class="form-select form-select-lg mb-3" asp-for="Frequency">
+        <div class="registerField">
+            <select class="form-control mb-3" asp-for="Frequency">
+                <option selected>Frequency</option>
                 <option value="Every Day" selected>Every Day</option>
                 <option value="Specific Days">Specific Days</option>
                 <option value="Days Interval">Days Interval</option>
@@ -49,8 +46,8 @@
         </div>
 
         <!-- Time Of Taking field-->
-        <div class="form-group">
-            <label asp-for="TimeOfTaking">Time Of Taking</label><br />
+        <div class="registerField">
+            <label style="margin: 0;" asp-for="TimeOfTaking">Time Of Taking</label><br />
             <div id="timepicker" class="timepicker">
                 <input class="timepickinput" type="text" value="00:00 AM" asp-for="TimeOfTaking" readonly />
             </div>
@@ -58,18 +55,17 @@
 
         <!--/ timepicker -->
         <!--Upload Pill Image field-->
-        <div>
+        <div class="registerField">
             <label>Upload Pill Image</label> <br />
             <button style="padding: 10px 50px; border: solid black 2px;" class="btn btn-lg">
                 <img class="upload-image-icon" src="~/img/upload-image-icon.png" alt="Upload Image Icon" />
             </button>
         </div>
-        <div>
+        <div class="registerField">
             <label>Upload Prescription</label> <br />
             <button style="padding: 10px 50px; border: solid black 2px;" class="btn btn-lg">
                 <img class="upload-image-icon" src="~/img/upload-image-icon.png" alt="Upload Image Icon" />
             </button>
         </div>
-        <input type="submit" />
     </form>
 </div>
