--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientDetails.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Patient
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Patient Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
