--- a/MedOnTime-WebApp/MedOnTime-WebApp/wwwroot/css/style.css
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/wwwroot/css/style.css
@@ -13,6 +13,10 @@ input {
     min-height: 20px;
 }
 
+li {
+    list-style: none;
+}
+
 div {
     margin: 5px;
     text-align: center;
@@ -46,16 +50,14 @@ td {
 }
 
 /* Index.cshtml styles */
-/*#homeCalendar {
-    height: 200px;
-}*/
+.homeCalendar {
+    max-width: 60%;
+}
 
 .homeContent {
     /*position: absolute;*/
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
 }
 
 .homeRoute, input[type="submit"] {
@@ -72,9 +74,9 @@ td {
     margin: 20px;
 }
 
-#homeFlexRow {
+#homeFlexRow, .homeContent {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -111,14 +113,9 @@ td {
 }
 
 
-/*Mobile Styles*/
-/*@media only screen and (max-width: 600px) {
-    
-}*/
-
 /*Time Picker Styles*/
 .timepicker {
-    width: 250px;
+    min-width: 250px;
     position: relative;
 }
 
@@ -174,11 +171,10 @@ table.timepicker {
         }
 
 .timepickinput {
-    text-align:center;
-    padding: 10px 12px 8px 30px;
+    padding: 5px;
     background: url('http://cdn3.iconfinder.com/data/icons/linecons-free-vector-icons-pack/32/clock-32.png') no-repeat -5px 5px;
     border: 0;
-    width: 85px;
+    width: 100%;
     font: 400 18px/100% Georgia, Times, "Times New Roman", serif;
     color: #222;
     
