--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
@@ -55,7 +55,7 @@
             Time Of Taking
         </dt>
         <dd class="col-sm-10">
-            @Model.TimeOfTaking
+            @Model.FirstDoseTime
         </dd>
         <dt class="col-sm-2">
             Frequency
