--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationForm.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationForm.cshtml
@@ -69,7 +69,7 @@
                     <label for="file-upload" class="custom-file-upload">
                         <img class="upload-image-icon" src="~/img/upload-image-icon.png" alt="Upload Image Icon" />
                     </label>
-                    <input id="file-upload" type="file" name="image" style="display:none;" />
+                    <input id="file-upload" type="file" name="medImage" style="display:none;" />
                 </div>
             </div>
         </div>
