--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
@@ -64,6 +64,12 @@
             @Model.Frequency
         </dd>
         <dt class="col-sm-2">
+            Medication Image
+        </dt>
+        <dd class="col-sm-10">
+            <img src="~/img/test.jpg" alt="@Model.MedicationName" width="100" height="100" />
+        </dd>
+        <dt class="col-sm-2">
             QRCode
         </dt>
         <dd class="col-sm-10">
