now caretaker can view their patient's med taking history

--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientDetails.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientDetails.cshtml
@@ -55,4 +55,7 @@
     <form asp-action="MedicationForm" asp-controller="Medication" method="get">
         <input type="submit" value="Add new medication for @Model.FirstName" />
     </form>
+    <form asp-action="PatientList" asp-controller="Patient" method="get">
+        <input type="submit" value="Back To List" />
+    </form>
 </div>
