--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientLog.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientLog.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Patient>
+﻿@model IEnumerable<Log>
 
 <h3><img class="heartBeatIcon" src="~/img/heart-beat-icon.png" alt="Heart Icon" />   Patient Profile</h3>
 
@@ -6,7 +6,7 @@
 @{ ViewData["Title"] = "Patient List";
     Layout = "~/Views/Shared/_Layout.cshtml"; }
 
-<h1>Your Patients</h1>
+<h1>History of patient</h1>
 @if (!LoginStatus.IsLoggedIn)
 {
     <section class="homeContent">
@@ -19,19 +19,16 @@
     </section> }
 else
 {
-    <p>
-        <a asp-action="AddPatient">Add new patient</a>
-    </p>
-    @if (LoginStatus.Patients.Count() != 0)
+    @if (Model.Count() != 0)
     {
         <table class="table">
             <thead>
                 <tr>
                     <th>
-                        Patient Name
+                        Time Taken
                     </th>
                     <th>
-                        Age
+                        Medication
                     </th>
                 </tr>
             </thead>
@@ -40,22 +37,21 @@ else
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
+                            @item.TimeTake
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Age)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Edit", "EditPatient", new { Id = item.Id }) |
-                            @Html.ActionLink("Details", "PatientDetails", new { Id = item.Id }) |
-                            @Html.ActionLink("Delete", "DeletePatient", new { Id = item.Id }) |
-                            @Html.ActionLink("History", "PatientLog", new { Id = item.PatientID })
+                            @item.MedicationID
                         </td>
                     </tr>
                 }
             </tbody>
-        </table> }
+        </table>
+    }
     else
     {
-        <h2 class="text-danger">There are no patients yet.</h2>}
+        <h2 class="text-danger">There are no history yet.</h2>}
 }
+
+<form asp-action="PatientList" asp-controller="Patient" method="get">
+    <input type="submit" value="Back To List" />
+</form>
