--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationForm.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationForm.cshtml
@@ -1,17 +1,9 @@
 ﻿@model Medication
 
-<style>
-    .custom-file-upload {
-        border: 1px solid #ccc;
-        display: inline-block;
-        padding: 6px 12px;
-        cursor: pointer;
-    }
-</style>
 <div>
     <div class="alert-danger text-left" asp-validation-summary="All"></div>
     <h4>Add new medication for @LoginStatus.SelectedPatient.FirstName</h4>
-    <form enctype="multipart/form-data" asp-action="MedicationForm" method="post">
+    <form asp-action="MedicationForm" method="post">
         <input type="submit" />
         <!--Current Caretaker-->
         <input type="hidden" value="@LoginStatus.LogginedUser.Id" asp-for="CaretakerID" />
@@ -66,20 +58,12 @@
             <label>Upload Medication</label> <br />
             <div style="padding: 10px 50px; border: solid black 2px; cursor:pointer;" class="btn btn-lg">
                 <div class="image-upload">
-                    <label for="file-upload" class="custom-file-upload">
+                    <label for="file-input">
                         <img class="upload-image-icon" src="~/img/upload-image-icon.png" alt="Upload Image Icon" />
                     </label>
-                    <input id="file-upload" type="file" name="image" style="display:none;" />
+                  <input id="file-input" name="image" style="display:none;" type="file" />
                 </div>
             </div>
         </div>
     </form>
 </div>
-
-<script type="text/javascript">
-    $('#file-upload').change(function () {
-        var i = $(this).prev('label').clone();
-        var file = $('#file-upload')[0].files[0].name;
-        $(this).prev('label').text(file);
-    });
-</script>
