--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
@@ -1,32 +1,12 @@
 ﻿@model Medication
 
-@{
-    ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+@{ ViewData["Title"] = "Edit";
+                Layout = "~/Views/Shared/_Layout.cshtml"; }
 
 <div>
     <h1>Details</h1>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            Medication ID
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Id
-        </dd>
-        <dt class="col-sm-2">
-            Caretaker ID
-        </dt>
-        <dd class="col-sm-10">
-            @Model.CaretakerID
-        </dd>
-        <dt class="col-sm-2">
-            Patient ID
-        </dt>
-        <dd class="col-sm-10">
-            @Model.PatientID
-        </dd>
         <dt class="col-sm-2">
             Medication Name
         </dt>
@@ -67,18 +47,39 @@
             Medication Image
         </dt>
         <dd class="col-sm-10">
-            <img src="~/img/test.jpg" alt="@Model.MedicationName" width="100" height="100" />
+            <img src="~/img/test.jpg" alt="@Model.MedicationName" width="300" style="object-fit:contain;" />
         </dd>
         <dt class="col-sm-2">
-            QRCode
+            QRCode<br />
+            <button onclick="PrintImage('https://api.qrserver.com/v1/create-qr-code/?data=@Model.Id'); return false;" id="printImage">Print QR Code</button>
         </dt>
-        <dd class="col-sm-10">
+        <dd download class="col-sm-10">
             <img id="QRIMG" src="https://api.qrserver.com/v1/create-qr-code/?data=@Model.Id" width="100" height="100" alt="QR code" /><br />
         </dd>
     </dl>
+
+    @*<button onclick="PrintImage('imgs/480x480.jpg');" id="printImage">Print this Image</button>*@
 </div>
 <div>
     @Html.ActionLink("Edit", "MedicationEdit", new { Id = Model.Id }) |
     @Html.ActionLink("Delete", "MedicationDelete", new { Id = Model.Id }) |
     @Html.ActionLink("Back to list", "MedicationList")
 </div>
+
+
+<script>
+    function ImagetoPrint(source) {
+        return "<html><head><script>function step1(){\n" +
+            "setTimeout('step2()', 10);}\n" +
+            "function step2(){window.print();window.close()}\n" +
+            "</scri" + "pt></head><body onload='step1()'>\n" +
+            "<img src='" + source + "' /></body></html>";
+    }
+    function PrintImage(source) {
+        Pagelink = "about:blank";
+        var pwa = window.open(Pagelink, "_new");
+        pwa.document.open();
+        pwa.document.write(ImagetoPrint(source));
+        pwa.document.close();
+    }
+</script>
