--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationEdit.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationEdit.cshtml
@@ -50,6 +50,11 @@
             </div>
         </div>
 
+        <!-- HoursBetween field-->
+        <div class="registerField">
+            <input class="form-control" type="number" asp-for="HoursBetween" min="0" placeholder="HoursBetween" />
+        </div>
+
         <!--Upload Pill Image field-->
         <div class="registerField">
             <label>Upload Medication</label> <br />
@@ -58,6 +63,7 @@
                     <label for="file-upload" class="custom-file-upload">
                         <img class="upload-image-icon" src="~/img/upload-image-icon.png" alt="Upload Image Icon" />
                     </label>
+                    <!--TODO: Fix editing bug of not detecting image change in MedicationEdit form-->
                     <input id="file-upload" type="file" name="medImage" style="display:none;" />
                 </div>
             </div>
