--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Shared/_Layout.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using MedOnTime_WebApp.Models
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -17,6 +18,12 @@
             <div class="container">
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
                     <ul class="navbar-nav flex-row">
+                        @if (LoginStatus.IsLoggedIn)
+                        {
+                            <li class="nav-item">
+                                <a class="navbar-brand" href="#" id="medOnTime-title" onclick="Logout()">Logout</a>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="navbar-brand" id="medOnTime-title" asp-area="" asp-controller="Home" asp-action="Index">MedOnTime</a>
                         </li>
@@ -68,5 +75,14 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    <script type="text/javascript">
+        function Logout() {
+            var conf = confirm("Confirm Logout?");
+            if (conf == true) {
+                alert("You have now logged out.");
+                window.location.href = '@Url.Action("Logout", "Caretaker")';
+            }
+        }
+    </script>
 </body>
 </html>
