--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Medication
 
-@{  ViewData["Title"] = "Edit";
+@{ ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.imageSrc = Model.Id + ".jpg";
 
@@ -62,6 +62,39 @@
     }
 }
 
+
+<script>
+    function ImagetoPrint(source) {
+        var returnStr = "<html><head><script>function step1(){\n" +
+            "setTimeout('step2()', 10);}\n" +
+            "function step2(){window.print();window.close()}\n" +
+            "</scri" + "pt></head><body onload='step1()'>\n";
+
+        for (let i = 0; i < source.length; i++) {
+            returnStr += "<img src='" + source[i] + "' width='50px'/>"
+        }
+
+        returnStr += "</body></html>";
+
+        return returnStr;
+
+@*        return "<html><head><script>function step1(){\n" +
+            "setTimeout('step2()', 10);}\n" +
+            "function step2(){window.print();window.close()}\n" +
+            "</scri" + "pt></head><body onload='step1()'>\n" +
+            "<img src='" + source + "' /></body></html>";*@
+    }
+
+    function PrintAssets() {
+        var images = [ 'https://api.qrserver.com/v1/create-qr-code/?data=@Model.Id', '@ShapeSrc' ];
+        Pagelink = "about:blank";
+        var pwa = window.open(Pagelink, "_new");
+        pwa.document.open();
+        pwa.document.write(ImagetoPrint(images));
+        pwa.document.close();
+    }
+</script>
+
 <div>
     <h1>Details</h1>
     <hr />
@@ -119,12 +152,14 @@
         </dd>
         <dt class="col-sm-2">
             QRCode<br />
-            <button onclick="PrintImage('https://api.qrserver.com/v1/create-qr-code/?data=@Model.Id'); return false;" id="printImage">Print QR Code</button>
         </dt>
         <dd download class="col-sm-10">
             <img id="QRIMG" src="https://api.qrserver.com/v1/create-qr-code/?data=@Model.Id" width="100" height="100" alt="QR code" /><br />
         </dd>
-        </dl>
+    </dl>
+    <div>
+        <button onclick="PrintAssets(); return false;" id="printImage">Print Shape and QR Code</button>
+    </div>
 
     @*<button onclick="PrintImage('imgs/480x480.jpg');" id="printImage">Print this Image</button>*@
 </div>
@@ -133,21 +168,3 @@
     @Html.ActionLink("Delete", "MedicationDelete", new { Id = Model.Id }) |
     @Html.ActionLink("Back to list", "MedicationList")
 </div>
-
-
-<script>
-    function ImagetoPrint(source) {
-        return "<html><head><script>function step1(){\n" +
-            "setTimeout('step2()', 10);}\n" +
-            "function step2(){window.print();window.close()}\n" +
-            "</scri" + "pt></head><body onload='step1()'>\n" +
-            "<img src='" + source + "' /></body></html>";
-    }
-    function PrintImage(source) {
-        Pagelink = "about:blank";
-        var pwa = window.open(Pagelink, "_new");
-        pwa.document.open();
-        pwa.document.write(ImagetoPrint(source));
-        pwa.document.close();
-    }
-</script>
